Bug 1560110 - Cache children of detached browsing contexts. r=nika

To be able to reach all BrowsingContexts in
BrowsingContextGroup::EnsureSubscribed we need to make sure that if a
BrowsingContext is detached, we need to cache all of its children in
case we call BrowsingContextGroup::EnsureSubscribed before the
children in turn are detached.

Differential Revision: https://phabricator.services.mozilla.com/D45337